# beauty-in-stats

./: .gitignore  README.md  build-corpus.py  pyproject.toml  requirements.txt
assets/: beauty-in-stats-logo.key
embeddings/: emb_test.ipynb
src/core/: config.py
src/dev/: abstract_analysis.py  gradio_app.py
src/dev/agents/: Apptainer.def  Dockerfile  README.md  lhcb_scraper.py  physbert.ipynb  requirements.txt
src/lhcbert/: data_processor.py  encoder.py  eval.py  metrics.py  mlm_contd_pretraining.py  prototype_mlm_contd_pt.ipynb  visualise.py
src/scraper/: README.md
src/scraper/api_clients/: inspire.py
src/scraper/containers/: Apptainer.def  Dockerfile  requirements.txt
src/scraper/core/: models.py
src/scraper/scripts/: build_lhcb_corpus.py  lhcb_symbols.csv  post_process_latex.py  scrape_build_lhcb_papers.py
src/scraping/: __init__.py  inspire.py  test_inspire.py
src/scripts/: build_corpus.py  build_lhcb_corpus.py  post_process_latex.py
tree_rag/: baby_rag.ipynb  create_paper_trees.ipynb  create_tree_rag.ipynb  paper_tree.py  rag.py  rag_evals.ipynb  tree_rag.ipynb
tree_rag/saved_paper_trees/paper_trees/: 1008.3105.pkl  1009.1963.pkl  1009.2731.pkl  1101.4896.pkl  1102.0206.pkl  1102.0348.pkl  1103.0423.pkl  1103.2465.pkl  1106.4435.pkl  1107.0882.pkl  1107.2328.pkl  1107.3935.pkl  1109.0963.pkl  1109.3398.pkl  1109.4276.pkl  1109.6831.pkl  1110.0730.pkl  1110.2866.pkl  1110.3970.pkl  1111.0521.pkl  1111.4183.pkl  1112.0938.pkl  1112.1600.pkl  1112.3056.pkl  1112.3183.pkl  1112.3515.pkl  1112.4311.pkl  1112.4592.pkl  1112.4695.pkl  1112.4698.pkl  1112.4896.pkl  1112.5310.pkl  1201.4402.pkl  1201.5600.pkl  1202.1080.pkl  1202.4717.pkl  1202.4812.pkl  1202.4979.pkl  1202.5087.pkl  1202.6251.pkl  (+740 more)
tree_rag/saved_paper_trees/summarized_openai_paper_trees/: 1008.3105.pkl  1009.1963.pkl  1009.2731.pkl  1101.4896.pkl  1102.0206.pkl  1102.0348.pkl  1103.0423.pkl  1103.2465.pkl  1106.4435.pkl  1107.0882.pkl  1107.2328.pkl  1107.3935.pkl  1109.0963.pkl  1109.3398.pkl  1109.4276.pkl  1109.6831.pkl  1110.0730.pkl  1110.2866.pkl  1110.3970.pkl  1111.0521.pkl  1111.4183.pkl  1112.0938.pkl  1112.1600.pkl  1112.3056.pkl  1112.3183.pkl  1112.3515.pkl  1112.4311.pkl  1112.4592.pkl  1112.4695.pkl  1112.4698.pkl  1112.4896.pkl  1112.5310.pkl  1201.4402.pkl  1201.5600.pkl  1202.1080.pkl  1202.4717.pkl  1202.4812.pkl  1202.4979.pkl  1202.5087.pkl  (+740 more)
tree_rag/validation_data/: split_tex_for_qna.ipynb
wg-classification/: README.md  ask-model.py  conversions.csv  rulebased.py
(+785 files in other folders)
