[tool.poetry]
# basic info
name = "beautyinstats"
version = "0.1.0"
description = "LLM-powered assistant for the statistical analysis of data collected with the LHCb experiment at CERN"
authors = ["reallyblaised <blaiserd@proton.me>"]
readme = "README.md"              
license = "MIT"                   
# code location
packages = [
    { include = "beautyinstats", from = "src" }, 
]
# core dependencies
[tool.poetry.dependencies]
python = "^3.9"
PyMuPDF = "^1.23.5"               # PDF processing
requests = "^2.31.0"              # downloade papers
pydantic = "^2.5.1"               # data validation - crucial for ML projects
# dev-stage dependencies
[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"                 # testing
black = "^23.11.0"                # code formatting
ruff = "^0.1.5"                   # linting
mypy = "^1.7.0"                   # static type checking
# development tools config
[tool.black]
line-length = 88
[tool.ruff]
line-length = 88
select = ["E", "F", "I"]          # Error, Function, Import checks
[tool.mypy]
strict = true                     
ignore_missing_imports = true     